@@ -1,3 +1,6 @@
+20111002
+	Always move pkg_install on top of the "to-upgrade" list
+
 20111001
 	pkgin now depends on pkgsrc's pkg_install
 
